--- a/superzup/tea.yaml
+++ b/superzup/tea.yaml
@@ -1,1 +1,6 @@
-move to the next interactive element on the page
+# https://tea.xyz/what-is-this-file
+---
+version: 1.0.0
+codeOwners:
+  - '0x26eD86fb2505497D4D3cDF5663a101FD48263612'
+quorum: 1
